Reduced complexity to optimize runtime
Removed storage efficiencies and made emissions a factor of tons of co2

--- a/3. Future Scenario - Electrified/2. Code/Model.ipynb
+++ b/3. Future Scenario - Electrified/2. Code/Model.ipynb
@@ -132,7 +132,7 @@
     "\n",
     "#reading the csv's for storages\n",
     "readin_e2pratio = pd.read_csv('../1. Input/e2pratio.csv', index_col=[0], sep=',').squeeze('columns')\n",
-    "readin_storagechargeefficiency = pd.read_csv('../1. Input/storagechargeefficiency.csv', index_col=[0,1], sep=',').squeeze('columns')\n",
+    "#readin_storagechargeefficiency = pd.read_csv('../1. Input/storagechargeefficiency.csv', index_col=[0,1], sep=',').squeeze('columns')\n",
     "readin_storagedischargeefficiency = pd.read_csv('../1. Input/storagedischargeefficiency.csv', index_col=[0,1], sep=',').squeeze('columns')\n",
     "readin_maxstoragecapacity = pd.read_csv('../1. Input/maxstoragecapacity.csv', index_col=[0,1], sep=',').squeeze('columns')\n",
     "readin_investmentcoststorage = pd.read_csv('../1. Input//investmentcoststorage.csv', index_col=[0], sep=',').squeeze('columns')\n",
@@ -165,7 +165,7 @@
     "\n",
     "#for storage\n",
     "EM.E2PRatio = pyo.Param(EM.Storage, default=0, initialize=readin_e2pratio)\n",
-    "EM.StorageChargeEfficiency = pyo.Param(EM.Storage, EM.Fuel, default=1, initialize=readin_storagechargeefficiency)\n",
+    "#EM.StorageChargeEfficiency = pyo.Param(EM.Storage, EM.Fuel, default=1, initialize=readin_storagechargeefficiency)\n",
     "EM.StorageDisChargeEfficiency = pyo.Param(EM.Storage, EM.Fuel, default=1, initialize=readin_storagedischargeefficiency)\n",
     "EM.MaxStorageCapacity = pyo.Param(EM.Year,EM.Storage, default=float('inf'), initialize=readin_maxstoragecapacity)\n",
     "EM.InvestmentCostStorage = pyo.Param(EM.Storage, default=0, initialize=readin_investmentcoststorage)\n",
@@ -351,7 +351,7 @@
     "def storagelevelfunction(EM,y,s,h,f): \n",
     "    if EM.StorageDisChargeEfficiency[s,f] > 0 and h>1:\n",
     "        return (\n",
-    "            EM.StorageLevel[y,h,s,f] == EM.StorageLevel[y,h-1,s,f] + EM.StorageCharge[y,h,s,f]*EM.StorageChargeEfficiency[s,f] - EM.StorageDisCharge[y,h,s,f]/EM.StorageDisChargeEfficiency[s,f]\n",
+    "            EM.StorageLevel[y,h,s,f] == EM.StorageLevel[y,h-1,s,f] + EM.StorageCharge[y,h,s,f] - EM.StorageDisCharge[y,h,s,f]\n",
     "        )\n",
     "    else:\n",
     "        return pyo.Constraint.Skip\n",
@@ -359,7 +359,7 @@
     "def storagelevelstartfunction(EM,y,s,h,f): \n",
     "    if EM.StorageDisChargeEfficiency[s,f] > 0 and h==1:\n",
     "        return (\n",
-    "            EM.StorageLevel[y,h,s,f] == 0.5*EM.TotalStorageCapacity[y,s,f] + EM.StorageCharge[y,h,s,f]*EM.StorageChargeEfficiency[s,f] - EM.StorageDisCharge[y,h,s,f]/EM.StorageDisChargeEfficiency[s,f]\n",
+    "            EM.StorageLevel[y,h,s,f] == 0.5*EM.TotalStorageCapacity[y,s,f] + EM.StorageCharge[y,h,s,f] - EM.StorageDisCharge[y,h,s,f]\n",
     "        )\n",
     "    else:\n",
     "        return pyo.Constraint.Skip\n",
@@ -460,7 +460,16 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ERROR: Constructing component 'StorageLevelFunction' from data=None failed:\n",
+      "        KeyboardInterrupt:\n"
+     ]
+    }
+   ],
    "source": [
     "#creating the instance of the model here\n",
     "instance = EM.create_instance()\n"
@@ -475,20 +484,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'Problem': [{'Name': 'x5019768', 'Lower bound': 134444.96147020702, 'Upper bound': 134444.9614702095, 'Number of objectives': 1, 'Number of constraints': 5203719, 'Number of variables': 5019768, 'Number of binary variables': 0, 'Number of integer variables': 33, 'Number of continuous variables': 5019735, 'Number of nonzeros': 15825921, 'Sense': 'minimize'}], 'Solver': [{'Status': 'ok', 'Return code': '0', 'Message': 'Model was solved to optimality (subject to tolerances), and an optimal solution is available.', 'Termination condition': 'optimal', 'Termination message': 'Model was solved to optimality (subject to tolerances), and an optimal solution is available.', 'Wall time': '2335.46799993515', 'Error rc': 0, 'Time': 2371.5521545410156}], 'Solution': [OrderedDict([('number of solutions', 0), ('number of solutions displayed', 0)])]}"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#defining the solver here\n",
     "opt = pyo.SolverFactory('gurobi')\n",
@@ -506,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,19 +522,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4205562.945035325\n",
-      "194239.4187442523\n",
-      "0.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#extracting the data from the solution to export results\n",
     "\n",
@@ -626,38 +614,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "         Year  Hour        Technology      Fuel       Value\n",
-      "0        2030     1           SolarPV     Power   -0.000000\n",
-      "1        2030     1           SolarPV      Heat    0.000000\n",
-      "2        2030     1           SolarPV  Mobility    0.000000\n",
-      "3        2030     1           SolarPV   Cooking    0.000000\n",
-      "4        2030     1           SolarPV    Diesel    0.000000\n",
-      "...       ...   ...               ...       ...         ...\n",
-      "1734475  2040  8760  ElectricHeatPump      Heat  102.602359\n",
-      "1734476  2040  8760  ElectricHeatPump  Mobility    0.000000\n",
-      "1734477  2040  8760  ElectricHeatPump   Cooking    0.000000\n",
-      "1734478  2040  8760  ElectricHeatPump    Diesel    0.000000\n",
-      "1734479  2040  8760  ElectricHeatPump  FireWood    0.000000\n",
-      "\n",
-      "[1734480 rows x 5 columns]\n",
-      "Year  Technology      \n",
-      "2030  ElectricHeatPump    379465.523708\n",
-      "      WoodBurner          700323.254820\n",
-      "2035  ElectricHeatPump    292525.930165\n",
-      "      WoodBurner          827096.877083\n",
-      "2040  ElectricHeatPump    585009.140000\n",
-      "      WoodBurner          574755.696190\n",
-      "Name: Value, dtype: float64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(ProductionByTechnology)\n",
     "Heatloadserved = ProductionByTechnology[ProductionByTechnology['Technology'].isin(['ElectricHeatPump','WoodBurner'])]\n",
@@ -667,20 +626,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"\\n#useful scrap\\nProductionByTechnology = pd.DataFrame(instance.FuelProductionByTechnology.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.FuelProductionByTechnology.extract_values().keys(), names=('Hour','Technology', 'Fuel')), columns=['Value']).reset_index()\\nCapacity = pd.DataFrame(instance.Capacity.extract_values().values(), index=(instance.Capacity.extract_values().keys()), columns=['Value']).rename_axis('Technology').reset_index()\\nDemand = pd.DataFrame(readin_demand * demandprofile *(-1), columns=['value']).reset_index().rename(columns={'fuel': 'Fuel', 'hour': 'Hour', 'value' : 'Value'})\\nUse = pd.DataFrame(instance.FuelUseByTechnology.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.FuelUseByTechnology.extract_values().keys(), names=('Hour','Technology', 'Fuel')), columns=['Value']).reset_index()\\nCurtailment = pd.DataFrame(instance.Curtailment.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.Curtailment.extract_values().keys(), names=('Hour','Fuel')), columns=['Value']).reset_index()\\nStorageLevel = pd.DataFrame(instance.StorageLevel.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.StorageLevel.extract_values().keys(), names=('Hour','Storage','Fuel')), columns=['Value']).reset_index().fillna(0)\\nTotalCapacity = pd.DataFrame(instance.TotalCapacity.extract_values().values(), index=(instance.TotalCapacity.extract_values().keys()), columns=['Value']).rename_axis('Technology').reset_index()\\nTotalStorageCapacity = (pd.DataFrame(instance.TotalStorageCapacity.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.TotalStorageCapacity.extract_values().keys(), names=('Storage', 'Fuel')), columns=['Value']).reset_index().dropna()).drop('Fuel', axis=1).reset_index()\\nGenerationCapacity = TotalCapacity.iloc[0:5,:]\\nTotalCapitalCost = (pd.DataFrame(instance.TotalCapitalCost.extract_values().values(), index=(instance.TotalCapitalCost.extract_values().keys()), columns=['Value']).rename_axis('Technology').reset_index()).iloc[0:5,:]\\nTotalVariableCost = pd.DataFrame(instance.TotalVariableCost.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.TotalVariableCost.extract_values().keys(), names=('Hour', 'Technology')), columns=['Value']).reset_index()\\nTotalStorageCost = pd.DataFrame(instance.TotalStorageCost.extract_values().values(), index=(instance.TotalStorageCost.extract_values().keys()), columns=['Value']).rename_axis('Technology').reset_index()\\nTotalProjectCapital = pd.concat([TotalCapitalCost, TotalStorageCost], ignore_index=True)\\nTechnologyEmissions = pd.DataFrame(instance.TechnologyEmissions.extract_values().values(), index=(instance.TechnologyEmissions.extract_values().keys()), columns=['Value']).rename_axis('Technology').reset_index()\\n\\n#let's add outputs for our storage flows\\nStorageCharge = pd.DataFrame(instance.StorageCharge.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.StorageCharge.extract_values().keys(), names=('Hour','Technology','Fuel')), columns=['Value']).reset_index().fillna(0)\\nStorageDisCharge = (pd.DataFrame(instance.StorageDisCharge.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.StorageDisCharge.extract_values().keys(), names=('Hour','Technology','Fuel')), columns=['Value']).reset_index().fillna(0))\\n\\n# make sure that the values for Curtailment and Use are negative for our outputs\\nUse['Value']= Use['Value']*-1\\nCurtailment['Value']= Curtailment['Value']*-1\\nStorageCharge['Value']= StorageCharge['Value']*-1\\n\\n# combine all values for Production, Use, Demand, and Curtailment into one data frame\\nEnergyBalance = pd.concat([ProductionByTechnology,Use], ignore_index=True)\\nEnergyBalance = pd.concat([EnergyBalance,Demand], ignore_index=True)\\nEnergyBalance['Technology'] = EnergyBalance['Technology'].fillna('Demand')\\nEnergyBalance = pd.concat([EnergyBalance,Curtailment], ignore_index=True)\\nEnergyBalance['Technology'] = EnergyBalance['Technology'].fillna('Curtailment')\\nEnergyBalance = pd.concat([EnergyBalance,StorageCharge], ignore_index=True)\\nEnergyBalance = pd.concat([EnergyBalance,StorageDisCharge], ignore_index=True)\\n\\n# write our output values to csv files in the output subfolder\\nEnergyBalance.to_csv('../3. Output/EnergyBalance.csv',index=False)\\nCapacity.to_csv('../3. Output/Capacity.csv',index=False)\\nStorageLevel.to_csv('../3. Output/StorageLevel.csv',index=False)\\nTotalStorageCapacity.to_csv('../3. Output/TotalStorageCapacity.csv', index=False)\\nGenerationCapacity.to_csv('../3. Output/GenerationCapacity.csv', index=False)\\nTotalProjectCapital.to_csv('../3. Output/TotalProjectCapital.csv', index=False)\\nTotalVariableCost.to_csv('../3. Output/TotalVariableCost.csv', index=False)\\nTechnologyEmissions.to_csv('../3. Output/TechnologyEmissions.csv', index=False)\\n\\n#print(TotalCapacity)\\n#print(TotalStorageCapacity)\\n#print(GenerationCapacity)\\n#print(TotalCapitalCost)\\n#print(TotalProjectCapital)\\nprint(TechnologyEmissions)\\n\\n\""
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "'''\n",
     "#scrap yard\n",
