Average Variable Costs and Annual Total Var. extracted

--- a/3. Future Scenario - Electrified/2. Code/Model.ipynb
+++ b/3. Future Scenario - Electrified/2. Code/Model.ipynb
@@ -1,13 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -35,14 +28,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "#importing required packages\n",
     "import pyomo.environ as pyo\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np"
    ]
   },
   {
@@ -460,16 +454,7 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ERROR: Constructing component 'StorageLevelFunction' from data=None failed:\n",
-      "        KeyboardInterrupt:\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#creating the instance of the model here\n",
     "instance = EM.create_instance()\n"
@@ -484,9 +469,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Problem': [{'Name': 'x5019768', 'Lower bound': 130157.35080040815, 'Upper bound': 130159.08931926939, 'Number of objectives': 1, 'Number of constraints': 5203719, 'Number of variables': 5019768, 'Number of binary variables': 0, 'Number of integer variables': 33, 'Number of continuous variables': 5019735, 'Number of nonzeros': 15825921, 'Sense': 'minimize'}], 'Solver': [{'Status': 'ok', 'Return code': '0', 'Message': 'Model was solved to optimality (subject to tolerances), and an optimal solution is available.', 'Termination condition': 'optimal', 'Termination message': 'Model was solved to optimality (subject to tolerances), and an optimal solution is available.', 'Wall time': '997.3209998607635', 'Error rc': 0, 'Time': 1034.8654925823212}], 'Solution': [OrderedDict([('number of solutions', 0), ('number of solutions displayed', 0)])]}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#defining the solver here\n",
     "opt = pyo.SolverFactory('gurobi')\n",
@@ -504,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,9 +518,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4108.999801338711\n",
+      "166786.41304733948\n",
+      "0.0\n"
+     ]
+    }
+   ],
    "source": [
     "#extracting the data from the solution to export results\n",
     "\n",
@@ -591,7 +597,8 @@
     "TotalAnnualCapitalCosts = pd.concat([TotalCapitalCost,TotalStorageCost], axis=0).sort_values(by=['Year','Technology'], ascending=True).reset_index().drop('index', axis=1)\n",
     "\n",
     "#getting variable costs hourly profile for each year\n",
-    "TotalVariableCost = TotalVariableCost.drop(columns=['Technology'], axis=1).groupby(['Year','Hour']).sum()\n",
+    "TotalVariableCost = TotalVariableCost[TotalVariableCost['Technology'].isin(technologies_list)]\n",
+    "\n",
     "\n",
     "#writing our output values to csv files in the results subfolder\n",
     "EnergyBalance.to_csv('../3. Output/EnergyBalance.csv',index=False)\n",
@@ -601,7 +608,7 @@
     "Curtailment.to_csv('../3. Output/Curtailment.csv',index=False)\n",
     "StorageCapacity.to_csv('../3. Output/StorageCapacity.csv', index=False)\n",
     "TotalAnnualCapitalCosts.to_csv('../3. Output/TotalAnnualCapacityCosts.csv', index=False)\n",
-    "TotalVariableCost.to_csv('../3. Output/AnnualVariableCost.csv', index=True)\n",
+    "#TotalVariableCost.to_csv('../3. Output/AnnualVariableCost.csv', index=True)\n",
     "\n",
     "print(sum(instance.AnnualTechnologyEmissions.extract_values().values()))\n",
     "print(sum(instance.Curtailment.extract_values().values()))\n",
@@ -614,9 +621,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "#Variablecosts --total and hourlyaverages in $/kWh of energy generation\n",
+    "\n",
+    "HourlyVariableCost = TotalVariableCost.drop(columns=['Technology'], axis=1).groupby(['Year','Hour']).sum()\n",
+    "#print(HourlyVariableCost)\n",
+    "ProductionforVariableCost = ProductionByTechnology[ProductionByTechnology['Technology'].isin(technologies_list)]\n",
+    "SumProductionforVariableCost = ProductionforVariableCost.drop(columns=['Technology','Fuel'], axis=1).groupby(['Year','Hour']).sum()\n",
+    "#print(SumProductionforVariableCost)\n",
+    "AnnualTotalVariableCosts = HourlyVariableCost.droplevel(1, axis=0).groupby(['Year']).sum()\n",
+    "#print(AnnualTotalVariableCosts)\n",
+    "AverageVariableCostTimeseries = HourlyVariableCost['Value']/SumProductionforVariableCost['Value']\n",
+    "#print(AverageVariableCostTimeseries)\n",
+    "\n",
+    "AnnualTotalVariableCosts.to_csv('../3. Output/AnnualTotalVariableCosts.csv', index=True)\n",
+    "AverageVariableCostTimeseries.to_csv('../3. Output/AverageVariableCostTimeseries.csv', index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         Year  Hour        Technology      Fuel      Value\n",
+      "0        2030     1           SolarPV     Power   -0.00000\n",
+      "1        2030     1           SolarPV      Heat    0.00000\n",
+      "2        2030     1           SolarPV  Mobility    0.00000\n",
+      "3        2030     1           SolarPV   Cooking    0.00000\n",
+      "4        2030     1           SolarPV    Diesel    0.00000\n",
+      "...       ...   ...               ...       ...        ...\n",
+      "1734475  2040  8760  ElectricHeatPump      Heat  102.48564\n",
+      "1734476  2040  8760  ElectricHeatPump  Mobility    0.00000\n",
+      "1734477  2040  8760  ElectricHeatPump   Cooking    0.00000\n",
+      "1734478  2040  8760  ElectricHeatPump    Diesel    0.00000\n",
+      "1734479  2040  8760  ElectricHeatPump  FireWood    0.00000\n",
+      "\n",
+      "[1734480 rows x 5 columns]\n",
+      "Year  Technology      \n",
+      "2030  ElectricHeatPump    402034.379890\n",
+      "      WoodBurner          677678.034950\n",
+      "2035  ElectricHeatPump    317761.361750\n",
+      "      WoodBurner          801782.264710\n",
+      "2040  ElectricHeatPump    584766.868144\n",
+      "      WoodBurner          574915.948376\n",
+      "Name: Value, dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
     "print(ProductionByTechnology)\n",
     "Heatloadserved = ProductionByTechnology[ProductionByTechnology['Technology'].isin(['ElectricHeatPump','WoodBurner'])]\n",
@@ -626,9 +684,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"\\n#useful scrap\\nProductionByTechnology = pd.DataFrame(instance.FuelProductionByTechnology.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.FuelProductionByTechnology.extract_values().keys(), names=('Hour','Technology', 'Fuel')), columns=['Value']).reset_index()\\nCapacity = pd.DataFrame(instance.Capacity.extract_values().values(), index=(instance.Capacity.extract_values().keys()), columns=['Value']).rename_axis('Technology').reset_index()\\nDemand = pd.DataFrame(readin_demand * demandprofile *(-1), columns=['value']).reset_index().rename(columns={'fuel': 'Fuel', 'hour': 'Hour', 'value' : 'Value'})\\nUse = pd.DataFrame(instance.FuelUseByTechnology.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.FuelUseByTechnology.extract_values().keys(), names=('Hour','Technology', 'Fuel')), columns=['Value']).reset_index()\\nCurtailment = pd.DataFrame(instance.Curtailment.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.Curtailment.extract_values().keys(), names=('Hour','Fuel')), columns=['Value']).reset_index()\\nStorageLevel = pd.DataFrame(instance.StorageLevel.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.StorageLevel.extract_values().keys(), names=('Hour','Storage','Fuel')), columns=['Value']).reset_index().fillna(0)\\nTotalCapacity = pd.DataFrame(instance.TotalCapacity.extract_values().values(), index=(instance.TotalCapacity.extract_values().keys()), columns=['Value']).rename_axis('Technology').reset_index()\\nTotalStorageCapacity = (pd.DataFrame(instance.TotalStorageCapacity.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.TotalStorageCapacity.extract_values().keys(), names=('Storage', 'Fuel')), columns=['Value']).reset_index().dropna()).drop('Fuel', axis=1).reset_index()\\nGenerationCapacity = TotalCapacity.iloc[0:5,:]\\nTotalCapitalCost = (pd.DataFrame(instance.TotalCapitalCost.extract_values().values(), index=(instance.TotalCapitalCost.extract_values().keys()), columns=['Value']).rename_axis('Technology').reset_index()).iloc[0:5,:]\\nTotalVariableCost = pd.DataFrame(instance.TotalVariableCost.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.TotalVariableCost.extract_values().keys(), names=('Hour', 'Technology')), columns=['Value']).reset_index()\\nTotalStorageCost = pd.DataFrame(instance.TotalStorageCost.extract_values().values(), index=(instance.TotalStorageCost.extract_values().keys()), columns=['Value']).rename_axis('Technology').reset_index()\\nTotalProjectCapital = pd.concat([TotalCapitalCost, TotalStorageCost], ignore_index=True)\\nTechnologyEmissions = pd.DataFrame(instance.TechnologyEmissions.extract_values().values(), index=(instance.TechnologyEmissions.extract_values().keys()), columns=['Value']).rename_axis('Technology').reset_index()\\n\\n#let's add outputs for our storage flows\\nStorageCharge = pd.DataFrame(instance.StorageCharge.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.StorageCharge.extract_values().keys(), names=('Hour','Technology','Fuel')), columns=['Value']).reset_index().fillna(0)\\nStorageDisCharge = (pd.DataFrame(instance.StorageDisCharge.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.StorageDisCharge.extract_values().keys(), names=('Hour','Technology','Fuel')), columns=['Value']).reset_index().fillna(0))\\n\\n# make sure that the values for Curtailment and Use are negative for our outputs\\nUse['Value']= Use['Value']*-1\\nCurtailment['Value']= Curtailment['Value']*-1\\nStorageCharge['Value']= StorageCharge['Value']*-1\\n\\n# combine all values for Production, Use, Demand, and Curtailment into one data frame\\nEnergyBalance = pd.concat([ProductionByTechnology,Use], ignore_index=True)\\nEnergyBalance = pd.concat([EnergyBalance,Demand], ignore_index=True)\\nEnergyBalance['Technology'] = EnergyBalance['Technology'].fillna('Demand')\\nEnergyBalance = pd.concat([EnergyBalance,Curtailment], ignore_index=True)\\nEnergyBalance['Technology'] = EnergyBalance['Technology'].fillna('Curtailment')\\nEnergyBalance = pd.concat([EnergyBalance,StorageCharge], ignore_index=True)\\nEnergyBalance = pd.concat([EnergyBalance,StorageDisCharge], ignore_index=True)\\n\\n# write our output values to csv files in the output subfolder\\nEnergyBalance.to_csv('../3. Output/EnergyBalance.csv',index=False)\\nCapacity.to_csv('../3. Output/Capacity.csv',index=False)\\nStorageLevel.to_csv('../3. Output/StorageLevel.csv',index=False)\\nTotalStorageCapacity.to_csv('../3. Output/TotalStorageCapacity.csv', index=False)\\nGenerationCapacity.to_csv('../3. Output/GenerationCapacity.csv', index=False)\\nTotalProjectCapital.to_csv('../3. Output/TotalProjectCapital.csv', index=False)\\nTotalVariableCost.to_csv('../3. Output/TotalVariableCost.csv', index=False)\\nTechnologyEmissions.to_csv('../3. Output/TechnologyEmissions.csv', index=False)\\n\\n#print(TotalCapacity)\\n#print(TotalStorageCapacity)\\n#print(GenerationCapacity)\\n#print(TotalCapitalCost)\\n#print(TotalProjectCapital)\\nprint(TechnologyEmissions)\\n\\n\""
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'''\n",
     "#scrap yard\n",
