Run time less than 20 min
All looks good so far

--- a/3. Future Scenario - Electrified/2. Code/Model.ipynb
+++ b/3. Future Scenario - Electrified/2. Code/Model.ipynb
@@ -621,145 +621,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Year</th>\n",
-       "      <th>Hour</th>\n",
-       "      <th>Fuel</th>\n",
-       "      <th>Value</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2030</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Power</td>\n",
-       "      <td>-0.000000e+00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>2030</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Power</td>\n",
-       "      <td>-0.000000e+00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>2030</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Power</td>\n",
-       "      <td>-0.000000e+00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>2030</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Power</td>\n",
-       "      <td>-0.000000e+00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>2030</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Power</td>\n",
-       "      <td>-4.440892e-15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>157650</th>\n",
-       "      <td>2040</td>\n",
-       "      <td>8756</td>\n",
-       "      <td>Power</td>\n",
-       "      <td>-0.000000e+00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>157656</th>\n",
-       "      <td>2040</td>\n",
-       "      <td>8757</td>\n",
-       "      <td>Power</td>\n",
-       "      <td>-0.000000e+00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>157662</th>\n",
-       "      <td>2040</td>\n",
-       "      <td>8758</td>\n",
-       "      <td>Power</td>\n",
-       "      <td>-0.000000e+00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>157668</th>\n",
-       "      <td>2040</td>\n",
-       "      <td>8759</td>\n",
-       "      <td>Power</td>\n",
-       "      <td>-0.000000e+00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>157674</th>\n",
-       "      <td>2040</td>\n",
-       "      <td>8760</td>\n",
-       "      <td>Power</td>\n",
-       "      <td>-2.131628e-14</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>26280 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        Year  Hour   Fuel         Value\n",
-       "0       2030     1  Power -0.000000e+00\n",
-       "6       2030     2  Power -0.000000e+00\n",
-       "12      2030     3  Power -0.000000e+00\n",
-       "18      2030     4  Power -0.000000e+00\n",
-       "24      2030     5  Power -4.440892e-15\n",
-       "...      ...   ...    ...           ...\n",
-       "157650  2040  8756  Power -0.000000e+00\n",
-       "157656  2040  8757  Power -0.000000e+00\n",
-       "157662  2040  8758  Power -0.000000e+00\n",
-       "157668  2040  8759  Power -0.000000e+00\n",
-       "157674  2040  8760  Power -2.131628e-14\n",
-       "\n",
-       "[26280 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              Value\n",
+      "Year               \n",
+      "2030  -32563.649050\n",
+      "2035  -20580.475730\n",
+      "2040 -113642.288267\n"
+     ]
     }
    ],
    "source": [
+    "#getting annual curtailment profiles\n",
+    "\n",
     "PowerCurtailment = Curtailment[Curtailment['Fuel'] == 'Power']\n",
-    "YearlyPowerCurtailment = PowerCurtailment.drop(columns=['Fuel'], axis=1).groupby(['Year']).sum()\n",
-    "YearlyPowerCurtailment "
+    "YearlyPowerCurtailment = PowerCurtailment.drop(columns=['Fuel','Hour'], axis=1).groupby(['Year']).sum()\n",
+    "print(YearlyPowerCurtailment)\n",
+    "YearlyPowerCurtailment.to_csv('../3. Output/YearlyPowerCurtailment.csv',index=True)"
    ]
   },
   {
