Restructured graphs for generation and storage

--- a/3. Future Scenario - Electrified/2. Code/Model.ipynb
+++ b/3. Future Scenario - Electrified/2. Code/Model.ipynb
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -578,10 +578,18 @@
     "Capacity = pd.concat([Capacity,NewCapacity], ignore_index=True)\n",
     "Capacity = pd.concat([Capacity,TotalCapacity], ignore_index=True)\n",
     "\n",
-    "#since we now have multiple storage capacity outputs, we have to do the same for storage capacities\n",
+    "#since we now have multiple storage capacity outputs, we have to do the same for storage capacities, also adjusting storage capacities again for dod. \n",
     "StorageCapacity = pd.DataFrame(columns=['Year', 'Storage','Fuel','Type', 'Value'])\n",
     "StorageCapacity = pd.concat([StorageCapacity,NewStorageEnergyCapacity], ignore_index=True)\n",
     "StorageCapacity = pd.concat([StorageCapacity,TotalStorageCapacity], ignore_index=True)\n",
+    "def adjstoragecapacity(row):\n",
+    "    if row[1] == 'LeadAcidBattery':\n",
+    "        return row[4] / 0.4\n",
+    "    elif row[1] == 'LFPBattery':\n",
+    "        return row[4] / 0.8\n",
+    "    else:\n",
+    "        return row[4]\n",
+    "StorageCapacity.iloc[:, 4] = StorageCapacity.apply(adjstoragecapacity, axis=1)\n",
     "\n",
     "#now, information on emissions would also be interesting\n",
     "AnnualTechnologyEmissions = pd.DataFrame(instance.AnnualTechnologyEmissions.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.AnnualTechnologyEmissions.extract_values().keys(), names=('Year','Technology')), columns=['Value']).reset_index() \n",
